# result

./: CMakeLists.txt  LICENSE  README.md
include/ltresult/: result.hpp
include/result/: result.hpp
